--- a/style.css
+++ b/style.css
@@ -12,12 +12,19 @@ body {
     background-size: cover;
 }
 
-.dis-non{
-    display: none;
+.none{
+    display: none !important;
+}
+
+.block {
+    display: block;
+}
+
+.flex {
+    display: flex;
 }
 
 .play-btn-wrapper {
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -37,7 +44,7 @@ body {
 
 #board {
     width: 450px;
-    height: 450px;
+    height: 480px;
     background-color: lightblue;
     border: 5px solid slategray;
     border-radius: 10px;
@@ -49,4 +56,57 @@ body {
 #board img {
     width: 50px;
     height: 50px;
+}
+
+.reset-btn {
+    width: 200px;
+    height: 60px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50px;
+    background: #ec2b81;
+    color:white;
+    font-size: 26px;
+    margin-top: 60px; 
+    margin-bottom: 50px;
+    position: absolute;
+    top: 80%;
+    left: 43%;
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
+.overlay-text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+.header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 50px;
+}
+
+#timer{
+    font-size:20px;
+    font-weight:bold;
 }
